force-app/main/default/objects/Campaign/fields/Appeal_Segment__c.field-meta.xml
<CustomField>
    <fullName>Appeal_Segment__c</fullName>
    <label>Appeal Segment</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Basic Membership</fullName>
            </value>
            <value>
                <fullName>Development</fullName>
            </value>
            <value>
                <fullName>General Operating</fullName>
            </value>
            <value>
                <fullName>Gift Planning and Endowment</fullName>
            </value>
            <value>
                <fullName>Local Underwriter</fullName>
            </value>
            <value>
                <fullName>Major Membership</fullName>
            </value>
            <value>
                <fullName>Matching Gift</fullName>
            </value>
            <value>
                <fullName>Mid Membership</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Sustainer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>