force-app/main/default/objects/Campaign/fields/Audience__c.field-meta.xml
<CustomField>
    <fullName>Audience__c</fullName>
    <inlineHelpText>For which audience is this event intended?  Members?  Donors?  Etc.</inlineHelpText>
    <label>Audience</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Members</fullName>
            </value>
            <value>
                <fullName>Donors</fullName>
            </value>
            <value>
                <fullName>Artists</fullName>
            </value>
            <value>
                <fullName>General</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>