force-app/main/default/objects/Campaign/fields/Caterer__c.field-meta.xml
<CustomField>
    <fullName>Caterer__c</fullName>
    <label>Caterer</label>
    <type>TextArea</type>
</CustomField>