force-app/main/default/objects/Campaign/fields/CnP_PaaS__CnP_Campaign_Type__c.field-meta.xml
<CustomField>
    <fullName>CnP_PaaS__CnP_Campaign_Type__c</fullName>
    <label>C&amp;P Campaign Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Primary</fullName>
                <default>true</default>
                <label>Primary</label>
            </value>
            <value>
                <fullName>CONNECT Team</fullName>
            </value>
            <value>
                <fullName>CONNECT Fundraiser</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>