force-app/main/default/objects/Campaign/fields/CnP_PaaS__CnP_Connect_Campaign_Link__c.field-meta.xml
<CustomField>
    <fullName>CnP_PaaS__CnP_Connect_Campaign_Link__c</fullName>
    <label>C&amp;P Connect Campaign Link</label>
    <type>Url</type>
</CustomField>