force-app/main/default/objects/Campaign/fields/CnP_PaaS__CnP_CONNECTcampaignAlias__c.field-meta.xml
<CustomField>
    <fullName>CnP_PaaS__CnP_CONNECTcampaignAlias__c</fullName>
    <label>C&amp;P CONNECT Campaign Alias</label>
    <length>50</length>
    <type>Text</type>
</CustomField>