force-app/main/default/objects/Campaign/fields/CnP_PaaS__CnP_CONNECTcampaignName__c.field-meta.xml
<CustomField>
    <fullName>CnP_PaaS__CnP_CONNECTcampaignName__c</fullName>
    <label>C&amp;P CONNECT Campaign Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>