force-app/main/default/objects/Campaign/fields/CnP_PaaS__CnP_CONNECTCampaignSKU__c.field-meta.xml
<CustomField>
    <fullName>CnP_PaaS__CnP_CONNECTCampaignSKU__c</fullName>
    <label>C&amp;P CONNECT Campaign SKU</label>
    <length>250</length>
    <type>Text</type>
</CustomField>