force-app/main/default/objects/Campaign/fields/CnP_PaaS__CnP_Lift_Basis__c.field-meta.xml
<CustomField>
    <fullName>CnP_PaaS__CnP_Lift_Basis__c</fullName>
    <label>C&amp;P Lift Basis</label>
    <length>255</length>
    <type>Text</type>
</CustomField>