force-app/main/default/objects/Campaign/fields/CnP_PaaS__CnP_Lift_Campaign__c.field-meta.xml
<CustomField>
    <fullName>CnP_PaaS__CnP_Lift_Campaign__c</fullName>
    <label>C&amp;P Lift Campaign</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Inactive</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>