force-app/main/default/objects/Campaign/fields/CnP_PaaS__CnP_Lift_Life_Span__c.field-meta.xml
<CustomField>
    <fullName>CnP_PaaS__CnP_Lift_Life_Span__c</fullName>
    <label>C&amp;P Lift Life Span</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>