force-app/main/default/objects/Campaign/fields/CnP_PaaS__CnP_Patron_Rank_Max__c.field-meta.xml
<CustomField>
    <fullName>CnP_PaaS__CnP_Patron_Rank_Max__c</fullName>
    <label>C&amp;P Patron Rank Max</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>