force-app/main/default/objects/Campaign/fields/CnP_PaaS__CnP_Payment_Minimum__c.field-meta.xml
<CustomField>
    <fullName>CnP_PaaS__CnP_Payment_Minimum__c</fullName>
    <label>C&amp;P Payment Minimum</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>