force-app/main/default/objects/Campaign/fields/Collateral_Needed__c.field-meta.xml
<CustomField>
    <fullName>Collateral_Needed__c</fullName>
    <label>Collateral Needed</label>
    <length>750</length>
    <type>LongTextArea</type>
</CustomField>