force-app/main/default/objects/Campaign/fields/Education_Hours__c.field-meta.xml
<CustomField>
    <fullName>Education_Hours__c</fullName>
    <label>Education Hours</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>