force-app/main/default/objects/Campaign/fields/Education_Program__c.field-meta.xml
<CustomField>
    <fullName>Education_Program__c</fullName>
    <label>Education Program</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SHIFT</fullName>
            </value>
            <value>
                <fullName>In Your Classroom</fullName>
            </value>
            <value>
                <fullName>Film Spark</fullName>
            </value>
            <value>
                <fullName>Festival Field Trips</fullName>
                <label>Festival Field Trip</label>
            </value>
            <value>
                <fullName>Behind the Animation</fullName>
            </value>
            <value>
                <fullName>Through My Lens</fullName>
            </value>
            <value>
                <fullName>Moving Stories</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>