force-app/main/default/objects/Campaign/fields/Event_Attendance__c.field-meta.xml
<CustomField>
    <fullName>Event_Attendance__c</fullName>
    <label>Event Attendance</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>