force-app/main/default/objects/Campaign/fields/Event_Date_and_Time__c.field-meta.xml
<CustomField>
    <fullName>Event_Date_and_Time__c</fullName>
    <inlineHelpText>Date and start time of the event.</inlineHelpText>
    <label>Event Date and Time</label>
    <type>DateTime</type>
</CustomField>