force-app/main/default/objects/Campaign/fields/Event_Goals__c.field-meta.xml
<CustomField>
    <fullName>Event_Goals__c</fullName>
    <inlineHelpText>What are the goals for this event?</inlineHelpText>
    <label>Event Goals</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>