force-app/main/default/objects/Campaign/fields/Event_Invitation__c.field-meta.xml
<CustomField>
    <fullName>Event_Invitation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Event Invitation</label>
    <type>Checkbox</type>
</CustomField>