force-app/main/default/objects/Campaign/fields/Event_Invitation_Send_Date__c.field-meta.xml
<CustomField>
    <fullName>Event_Invitation_Send_Date__c</fullName>
    <label>Event Invitation Send Date</label>
    <type>Date</type>
</CustomField>