force-app/main/default/objects/Campaign/fields/Event_Partners__c.field-meta.xml
<CustomField>
    <fullName>Event_Partners__c</fullName>
    <label>Event Partners</label>
    <type>TextArea</type>
</CustomField>