force-app/main/default/objects/Campaign/fields/Event_Save_the_Date__c.field-meta.xml
<CustomField>
    <fullName>Event_Save_the_Date__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Event &quot;Save the Date&quot;</label>
    <type>Checkbox</type>
</CustomField>