force-app/main/default/objects/Campaign/fields/Event_Sponsor_Line_Listings__c.field-meta.xml
<CustomField>
    <fullName>Event_Sponsor_Line_Listings__c</fullName>
    <label>Event Sponsor Line Listings</label>
    <type>TextArea</type>
</CustomField>