force-app/main/default/objects/Campaign/fields/Event_Sponsors__c.field-meta.xml
<CustomField>
    <fullName>Event_Sponsors__c</fullName>
    <label>Event Sponsors</label>
    <type>TextArea</type>
</CustomField>