force-app/main/default/objects/Campaign/fields/Event_Sponsors_Logos__c.field-meta.xml
<CustomField>
    <fullName>Event_Sponsors_Logos__c</fullName>
    <label>Event Sponsors Logos</label>
    <type>TextArea</type>
</CustomField>