force-app/main/default/objects/Campaign/fields/Fiscal_Sponsorship_Film_Checkbox__c.field-meta.xml
<CustomField>
    <fullName>Fiscal_Sponsorship_Film_Checkbox__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This is marked if the film is a Fiscal Sponsorship film</description>
    <inlineHelpText>Will automatically be checked if the Parent Campaign is Project Donation - Fiscal Sponsorship</inlineHelpText>
    <label>Fiscal Sponsorship Film?</label>
    <type>Checkbox</type>
</CustomField>