force-app/main/default/objects/Campaign/fields/kell01__Primary_Fund__c.field-meta.xml
<CustomField>
    <fullName>kell01__Primary_Fund__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Default Fund</label>
    <referenceTo>kell01__Fund__c</referenceTo>
    <relationshipLabel>Campaigns</relationshipLabel>
    <relationshipName>Campaigns</relationshipName>
    <type>Lookup</type>
</CustomField>