force-app/main/default/objects/Campaign/fields/Lead_Staff__c.field-meta.xml
<CustomField>
    <fullName>Lead_Staff__c</fullName>
    <label>Lead Staff</label>
    <length>255</length>
    <type>Text</type>
</CustomField>