force-app/main/default/objects/Campaign/fields/Legacy_Created_Date__c.field-meta.xml
<CustomField>
    <fullName>Legacy_Created_Date__c</fullName>
    <inlineHelpText>Date a record was created in NGOC</inlineHelpText>
    <label>Legacy Created Date</label>
    <type>Date</type>
</CustomField>