force-app/main/default/objects/Campaign/fields/Permits__c.field-meta.xml
<CustomField>
    <fullName>Permits__c</fullName>
    <label>Permits</label>
    <type>TextArea</type>
</CustomField>