force-app/main/default/objects/Campaign/fields/Save_The_Date_send_date__c.field-meta.xml
<CustomField>
    <fullName>Save_The_Date_send_date__c</fullName>
    <label>&quot;Save the Date&quot; Send date</label>
    <type>Date</type>
</CustomField>