force-app/main/default/objects/Campaign/fields/Student_Hours__c.field-meta.xml
<CustomField>
    <fullName>Student_Hours__c</fullName>
    <label>Student Hours</label>
    <precision>9</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>