force-app/main/default/objects/Campaign/fields/Support_Staff__c.field-meta.xml
<CustomField>
    <fullName>Support_Staff__c</fullName>
    <label>Support Staff</label>
    <length>255</length>
    <type>Text</type>
</CustomField>