force-app/main/default/objects/Campaign/fields/Teacher_Hours__c.field-meta.xml
<CustomField>
    <fullName>Teacher_Hours__c</fullName>
    <label>Teacher Hours</label>
    <precision>9</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>