force-app/main/default/objects/Campaign/fields/Ticket_Prices__c.field-meta.xml
<CustomField>
    <fullName>Ticket_Prices__c</fullName>
    <label>Ticket Prices</label>
    <length>255</length>
    <type>Text</type>
</CustomField>