force-app/main/default/objects/Campaign/fields/Ticketed_Event__c.field-meta.xml
<CustomField>
    <fullName>Ticketed_Event__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ticketed Event</label>
    <type>Checkbox</type>
</CustomField>