force-app/main/default/objects/Campaign/fields/TwilioSF__Deliverable__c.field-meta.xml
<CustomField>
    <fullName>TwilioSF__Deliverable__c</fullName>
    <label>Deliverable</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>