force-app/main/default/objects/Campaign/fields/TwilioSF__Failed__c.field-meta.xml
<CustomField>
    <fullName>TwilioSF__Failed__c</fullName>
    <label>Failed</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>