force-app/main/default/objects/Campaign/fields/TwilioSF__Not_Opted_In__c.field-meta.xml
<CustomField>
    <fullName>TwilioSF__Not_Opted_In__c</fullName>
    <label>Not Opted In</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>