force-app/main/default/objects/Campaign/fields/TwilioSF__Opt_In_Keyword__c.field-meta.xml
<CustomField>
    <fullName>TwilioSF__Opt_In_Keyword__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Opt-In Keyword</label>
    <referenceTo>TwilioSF__Opt_In_Keyword__c</referenceTo>
    <relationshipLabel>Campaigns</relationshipLabel>
    <relationshipName>Campaigns</relationshipName>
    <type>Lookup</type>
</CustomField>