force-app/main/default/objects/Campaign/fields/TwilioSF__Total_Deliverability_Count__c.field-meta.xml
<CustomField>
    <fullName>TwilioSF__Total_Deliverability_Count__c</fullName>
    <label>Total Deliverability Count</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>