force-app/main/default/objects/Campaign/fields/TwilioSF__Unknown__c.field-meta.xml
<CustomField>
    <fullName>TwilioSF__Unknown__c</fullName>
    <label>Unknown</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>