force-app/main/default/objects/Campaign/fields/Venue_Contact__c.field-meta.xml
<CustomField>
    <fullName>Venue_Contact__c</fullName>
    <label>Venue Contact</label>
    <length>255</length>
    <type>Text</type>
</CustomField>