force-app/main/default/objects/Campaign/fields/Venue_Contact_Email__c.field-meta.xml
<CustomField>
    <fullName>Venue_Contact_Email__c</fullName>
    <label>Venue Contact Email</label>
    <type>Email</type>
</CustomField>