force-app/main/default/objects/Campaign/fields/Venue_Notes_and_Comments__c.field-meta.xml
<CustomField>
    <fullName>Venue_Notes_and_Comments__c</fullName>
    <label>Venue Notes and Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>