force-app/main/default/objects/Campaign/fields/Venue_State__c.field-meta.xml
<CustomField>
    <fullName>Venue_State__c</fullName>
    <label>Venue State</label>
    <type>TextArea</type>
</CustomField>