force-app/main/default/objects/Campaign/fields/Venue_ZIP__c.field-meta.xml
<CustomField>
    <fullName>Venue_ZIP__c</fullName>
    <label>Venue ZIP</label>
    <length>10</length>
    <type>Text</type>
</CustomField>