force-app/main/default/objects/Campaign/recordTypes/Education.recordType-meta.xml
<RecordType>
    <fullName>Education</fullName>
    <active>true</active>
    <label>Education</label>
</RecordType>