force-app/main/default/objects/Campaign/validationRules/kell01__CheckActiveFund.validationRule-meta.xml
<ValidationRule>
    <fullName>kell01__CheckActiveFund</fullName>
    <active>true</active>
    <errorConditionFormula>AND( 
ISCHANGED(kell01__Primary_Fund__c), 
NOT(kell01__Primary_Fund__r.kell01__Active__c) 
)</errorConditionFormula>
    <errorDisplayField>kell01__Primary_Fund__c</errorDisplayField>
    <errorMessage>Default Fund must be active.</errorMessage>
</ValidationRule>