force-app/main/default/objects/Campaign/listViews/Artist_Foundry_Campaigns.listView-meta.xml
<ListView>
    <fullName>Artist_Foundry_Campaigns</fullName>
    <booleanFilter>1 OR 2</booleanFilter>
    <columns>CAMPAIGN.NAME</columns>
    <columns>CAMPAIGN.START_DATE</columns>
    <columns>PARENT_NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CAMPAIGN.NAME</field>
        <operation>contains</operation>
        <value>Foundry</value>
    </filters>
    <filters>
        <field>CAMPAIGN.NAME</field>
        <operation>contains</operation>
        <value>AF -</value>
    </filters>
    <label>Artist Foundry Campaigns</label>
</ListView>