force-app/main/default/objects/Campaign/listViews/EventbriteSync__ebCampaigns.listView-meta.xml
<ListView>
    <fullName>EventbriteSync__ebCampaigns</fullName>
    <columns>CAMPAIGN.NAME</columns>
    <columns>EventbriteSync__EventbriteId__c</columns>
    <columns>CAMPAIGN.NUM_OPPORTUNITIES</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>EventbriteSync__EventbriteId__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>Eventbrite Campaigns</label>
</ListView>