force-app/main/default/objects/Campaign/listViews/Eventive_Campaigns.listView-meta.xml
<ListView>
    <fullName>Eventive_Campaigns</fullName>
    <columns>CAMPAIGN.NAME</columns>
    <columns>CAMPAIGN.START_DATE</columns>
    <columns>CAMPAIGN.NUM_OPPORTUNITIES</columns>
    <columns>AMOUNT_WON</columns>
    <columns>Event_Venue__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PARENT_NAME</field>
        <operation>contains</operation>
        <value>eventive</value>
    </filters>
    <label>Eventive Campaigns</label>
</ListView>