force-app/main/default/objects/Campaign/listViews/Festival_Field_Trip_Campaigns.listView-meta.xml
<ListView>
    <fullName>Festival_Field_Trip_Campaigns</fullName>
    <columns>CAMPAIGN.NAME</columns>
    <columns>CAMPAIGN.NUM_OPPORTUNITIES</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CAMPAIGN.NAME</field>
        <operation>contains</operation>
        <value>FFT</value>
    </filters>
    <label>Festival Field Trip Campaigns</label>
</ListView>