force-app/main/default/objects/Campaign/listViews/Filmmaking_in_the_Classroom.listView-meta.xml
<ListView>
    <fullName>Filmmaking_in_the_Classroom</fullName>
    <columns>CAMPAIGN.NAME</columns>
    <columns>CAMPAIGN.START_DATE</columns>
    <columns>CAMPAIGN.LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CAMPAIGN.NAME</field>
        <operation>contains</operation>
        <value>filmmaking</value>
    </filters>
    <label>Filmmaking in the Classroom</label>
</ListView>